# fit_aic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_script.py
fit_aic/: __init__.py  _utils.py
fit_aic/lmfit/: model.py
fit_aic/scipy/: __init__.py  curve_fit.py
other/: test_script.py
tests/: test_curve_fit.py  test_lmfit.py
